[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/prefabs/gui/gameplay_menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/prefabs/al-pinball.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/debug.gd" type="Script" id=3]
[ext_resource path="res://scenes/prefabs/gui.tscn" type="PackedScene" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment() {
	COLOR = vec4(0.2,0.2,0.2,0.2);
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform float blur_amount = 3;

void fragment() {
	//vec2 tiled;
	//vec2 offset;
	//offset.x = cos(TIME) * 2.0;
	//offset.y = sin(TIME) * 2.0;
	//tiled = SCREEN_UV * vec2(5.0, 5.0);
	//vec2 waves;
	//waves.x = cos(TIME + tiled.x + tiled.y);
	//waves.y = sin(TIME + tiled.x + tiled.y);
	COLOR.rgb = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur_amount).rgb;
	//COLOR = vec4(waves, 0.0, 1.0);
	//COLOR = texture(SCREEN_TEXTURE, waves + offset);
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/blur_amount = 3.0

[node name="gameplay_stage" type="Node2D"]
material = SubResource( 2 )

[node name="al" parent="." instance=ExtResource( 2 )]

[node name="track" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="gui_canvas" type="CanvasLayer" parent="."]

[node name="menu_shader" type="ColorRect" parent="gui_canvas"]
visible = false
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" parent="gui_canvas" instance=ExtResource( 4 )]
pause_mode = 2

[node name="gameplay_menu" parent="gui_canvas" instance=ExtResource( 1 )]
pause_mode = 2
visible = false
